New speaker. Sponsors.

--- a/index.html
+++ b/index.html
@@ -213,15 +213,18 @@
 								</a>
 							</li>
 							<li>
-								<div class="hero AR">									
-									<div class="info">
-										<strong class="hero-name">???</strong>
-										<em class="hero-company">???</em>										
-									</div>
-								</div>
+                                <a class="hero zeno-rocha" href="http://braziljs.com.br/speakers/zeno" title="Saiba mais sobre o palestrante Zeno Rocha" data-layer='10'>
+                                    <span class="spikes">&nbsp;</span>
+                                    <div class="info">
+                                        <strong class="hero-name" itemprop="performer">Zeno Rocha</strong>
+                                        <em class="hero-company">Liferay</em>
+                                    </div>
+                                    <span class="photo">&nbsp;</span>
+                                </a>
+
 							</li>
 							<li>
-                                <a class="hero jean-carlo" href="http://braziljs.com.br/speakers/jean" title="Saiba mais sobre o palestrante Jean Carlo Emer" data-layer='10'>
+                                <a class="hero jean-carlo" href="http://braziljs.com.br/speakers/jean" title="Saiba mais sobre o palestrante Jean Carlo Emer" data-layer='11'>
                                     <span class="spikes">&nbsp;</span>
                                     <div class="info">
                                         <strong class="hero-name" itemprop="performer">Jean Carlo Emer</strong>
@@ -231,7 +234,7 @@
                                 </a>
 							</li>
 							<li>
-								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='11'>
+								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='12'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Renato Mangini</strong>
@@ -544,6 +547,39 @@
 									</ul>
 								</div>																
 							</li>
+                            <li id="zeno" itemscope itemtype="http://schema.org/Person">
+                                <div class="portrait">
+                                    <span class="photo">&nbsp;</span>
+                                    <ul class="share">
+                                        <li><div class="fb-like" data-href="http://braziljs.com.br/speakers/zeno.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+                                        <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/zeno.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+                                        <li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/zeno.html"></div></li>
+                                    </ul>
+                                </div>
+                                <div class="speaker">
+                                    <div class="info">
+                                        <h3 class="name" itemprop="name">Zeno Rocha</h3>
+                                        <em class="company" itemprop="worksFor">Liferay</em>
+                                        <div class="information" itemprop="description">
+                                            <span class="spacer">&nbsp;</span>
+                                            <p>Zeno Rocha já palestrou na HTML5DevConf em São Francisco, JAX Conf em Frankfurt e muitos outros eventos. Trabalhou como engenheiro de software na Petrobras e desenvolvedor front-end no Globoesporte.com.</p>
+                                            <p>Hoje, com 22 anos, trabalha como <span itemprop="worksFor">front-end engineer</span> na Liferay. Com diversos projetos open source como Browser Diet e jQuery Boilerplate, é um dos top 20 usuários mais ativos do GitHub.</p>
+                                            <p>Além disso, escreve artigos para Smashing Magazine, é apresentador do podcast Zone Of Front-Enders e co-foundador da BrazilJS Foundation.</p>
+                                        </div>
+                                    </div>
+                                    <ul class="social-networks">
+                                        <li>
+                                            <a class="github ir ico-general" href="https://github.com/zenorocha" title="Acesse o github do Zeno Rocha">github</a>
+                                        </li>
+                                        <li class="twitter">
+                                            <a class="twitter ir ico-general" href="https://twitter.com/zenorocha" title="Acesse o Twitter do Zeno Rocha">Twitter</a>
+                                        </li>
+                                        <li class="blog">
+                                            <a class="blog ir ico-general" href="http://zenorocha.com/" title="Acesse o site do Zeno Rocha" itemprop="url">http://caridy.name</a>
+                                        </li>
+                                    </ul>
+                                </div>                                                              
+                            </li>							
                             <li id="jean" itemscope itemtype="http://schema.org/Person">
                                 <div class="portrait">
                                     <span class="photo">&nbsp;</span>
@@ -711,13 +747,70 @@
 				        </div>
 				    </div>
 				</section>				
-				<section id="sponsors">&nbsp;</section>
+				<section id="sponsors">
+                    <div class="sponsors-wrapper">
+                        <h2 class="ttl-general ir title">Patrocinadores, sem vocês, o evento não aconteceria...</h2>
+                        <div class="sponsors adamantiun">
+                            <h3 class="ttl-general ir">Patrocinio Adamantiun</h3>
+                            <ul class="sponsor-list">
+                            	<li class="mozilla">
+                                    <strong class="sponsor">
+                                        <a href="http://www.mozilla.org" rel="external" title="visite o site da mozilla" class="sponsors-general">Mozilla</a>    
+                                    </strong>                                    
+                                    <p class="about">Mozilla is a global, nonprofit organization dedicated to making the Web better. We emphasize principle over profit, and believe that the Web is a shared public resource to be cared for, not a commodity to be sold. We work with a worldwide community to create open source products like Mozilla Firefox, and to innovate for the benefit of the individual and the betterment of the Web. The result is great products built by passionate people and better choices for everyone.</p>
+                                </li>
+
+                                <li class="blackberry">
+                                    <strong class="sponsor">
+                                        <a href="http://br.blackberry.com/" rel="external" title="visite o site da BlackBerry" class="sponsors-general">BlackBerry</a>    
+                                    </strong>                                    
+                                    <p class="about">A global leader in wireless innovation, BlackBerry® revolutionized the mobile industry when it was introduced in 1999. Today, BlackBerry aims to inspire the success of our millions of customers around the world by continuously pushing the boundaries of mobile experiences. Founded in 1984 and based in Waterloo, Ontario, BlackBerry operates offices in North America, Europe, Asia Pacific and Latin America. BlackBerry is listed on the NASDAQ Stock Market (NASDAQ: BBRY) and the Toronto Stock Exchange (TSX: BB). For more information, visit www.blackberry.com</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="sponsors gold">
+                            <h3 class="ttl-general ir">Patrocinio Gold</h3>
+                            <ul class="sponsor-list">
+                                <li class="liferay">
+                                    <strong class="sponsor">
+                                        <a href="http://www.liferay.com" rel="external" title="visite o site da Liferay" class="sponsors-general">Liferay</a>    
+                                    </strong>                                    
+                                    <p class="about">A Liferay é líder mundial em soluções para portais horizontais de colaboração social de código aberto. Reconhecida pelo Gartner em seu Quadrante Mágico como líder, possui escritórios físicos em mais de 14 países ao redor do mundo. No Brasil os escritórios estão em São Paulo e Recife, responsáveis por atender toda a América Latina.</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="sponsors bronze">
+                            <h3 class="ttl-general ir">Patrocinio Bronze</h3>
+                            <ul class="sponsor-list">
+                                <li>
+                                    <a href="https://github.com/" rel="external" title="saiba mais sobre o github" class="sponsor"><span class="github sponsors-general">github</span></a>
+                                </li>
+                                <li>
+                                    <a href="mailto:contato@braziljs.org" title="Quer ser um patrocinador? Fale conosco!" class="sponsor join-us">&nbsp;</a>
+                                </li>
+                                <li>
+                                    <a href="mailto:contato@braziljs.org" title="Quer ser um patrocinador? Fale conosco!" class="sponsor join-us">&nbsp;</a>
+                                </li>                                
+                                <li>
+                                    <a href="mailto:contato@braziljs.org" title="Quer ser um patrocinador? Fale conosco!" class="sponsor join-us">&nbsp;</a>                                    
+                                </li>                                
+                            </ul>
+                        </div>
+                        <p class="be-a-sponsor">Também deseja fazer parte da nossa história? Seja um patrocinador do #BrazilJS2013! <a href="mailto:contato@braziljs.org" title="participe você também!">Entre em contato!</a></p>
+                        <!--div class="supporters">
+                            <h3 class="ir ttl-general">Apoio:</h3>
+                            <ul>
+                                <li><a href="http://marimbondo.me" title="marimbondo - web com gominho" class="marimbondo ir">marimbondo</a></li>
+                            </ul>
+                        </div-->                        
+                    </div>          				    
+				</section>
 				<section id="follow-us">
 				    <div class="follow-us-container">
-				        <h2 class="ttl-general ir title">Veja o que andam falando da gente no twitter! Falê você também usando a hashtag #braziljs</h2>
+				        <h2 class="ttl-general ir title">Veja o que andam falando da gente no twitter! Fale você também usando a hashtag #braziljs</h2>
 				        <span class="burst">&nbsp;</span>
 				        <div id="tweets-container">&nbsp;</div>
-				        <strong class="at-braziljs"><i class="ico-general ir birdy"></i><a href="https://twitter.com/braziljs" rel="external" class="ttl-general ir our-link" >E nos siga em @Braziljs!</a></strong>
+				        <strong class="at-braziljs"><i class="ico-general ir birdy"></i><a href="https://twitter.com/braziljs" rel="external" class="ttl-general ir our-link" title="@braziljs">E nos siga em @Braziljs!</a></strong>
 				    </div>
 				</section>
 				<section id="the-guys">
