--- a/speakers/mauricio.html
+++ b/speakers/mauricio.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>Alexandre Gaigalas - BrazilJS 2013</title>
-        <meta name="description" content="BrazilJS Conf 2013 - Alexandre Gaigalas" />
+        <title>Mauricio Wolff - BrazilJS 2013</title>
+        <meta name="description" content="BrazilJS Conf 2013 - Mauricio Wolff" />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
         <link rel="icon" href="../facebook.png" type="image/x-icon">        
@@ -21,29 +21,29 @@
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="stylesheet" href="css/context.css" />
         <link type="text/plain" rel="author" href="humans.txt" />
-        <link rel="canonical" href="http://braziljs.com.br/speakers/alexandre.html" />
+        <link rel="canonical" href="http://braziljs.com.br/speakers/mauricio.html" />
 
         <!--[if lt IE 9]>
                 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
         <!-- OPEN GRAPH -->
-        <meta property="og:url" content="http://braziljs.com.br/speakers/thibault.html" />
+        <meta property="og:url" content="http://braziljs.com.br/speakers/mauricio.html" />
         <meta property="og:type" content="Website" /> 
-        <meta property="og:title" content="Alexandre Gaigalas - BrazilJS 2013" /> 
+        <meta property="og:title" content="Mauricio Wolff - BrazilJS 2013" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
-        <meta property="og:description" content="Eu vou assistir a palestra de Alexandre Gaigalas na BrazilJS Conf - 2013!" />
+        <meta property="og:description" content="Eu vou assistir a palestra de Mauricio Wolff na BrazilJS Conf - 2013!" />
 		<meta property="fb:admins" content="1114477480" /> 
 		<meta property="fb:app_id" content="136223956547034" /> 
 		<meta property="og:site_name" content="BrazilJS Conference" />
 
     </head>
-    <body class="alexandre">
+    <body class="mauricio">
     	<div class="wrapper">    		
 			<div id="speakers">
 				<div class="speakers-wrapper">
 					<span class="burst">&nbsp;</span>
-					<span class="speaker ir">Olá meu nome é Alexandre Gaigalas</span>
+					<span class="speaker ir">Olá meu nome é Mauricio Wolff</span>
 					<div class="ballons">
 						<span class="calling what">vem ver minha palestra...</span>
 						<span class="calling where">... na <b>brazilJs conf!!</b></span>
@@ -54,30 +54,33 @@
 			</div>
 			<div class="speaker-info">
 				<div class="info-container">
-					<h1 class="name" itemprop="name">Alexandre Gaigalas</h1>
-					<strong class="company" itemprop="worksFor">Yahoo!</strong>					
+					<h1 class="name" itemprop="name">Mauricio Wolff</h1>
+					<strong class="company" itemprop="worksFor">Dell</strong>					
 				</div>
 				<div id="social-networks">
 					<strong class="like-it ir ico-general">Curtiu? Compartilha!</strong>
 					<ul>
-						<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/alexandre.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
-						<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/alexandre" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+						<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/mauricio.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+						<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/mauricio" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
 						<li><div class="g-plusone" data-size="tall"></div></li>
 					</ul>
 				</div>
 				<div class="description" itemprop="description">
-					<p>Alexande Gaigalas é <span itemprop="jobTitle">desenvolvedor</span> no Yahoo! Brasil, entusiasta de arquiteturas RESTful e Web Semântica.</p>
+					<p>Mauricio Wolff é T&amp;T Global WebDev Lead na Dell, onde lidera um time de desenvolvedores em 4 países, fazendo testes AB e Personalização para os sites do dell.com.</p>
+					<p>Graphic Designer no início dos anos 90, passou por Interface Design, BackEnd, Information Architecture e finalmente FrontEnd.</p>
+					<p>Criador do tweetroulette.co e JSHint-Inline, mantém o blog bitbonsai.com onde vez ou outra posta bits 100% recicláveis.</p>
+					<p>Vive em Porto Alegre com sua mulher e filha, e quando não está programando (raro) pode ser encontrado tocando bateria ou estudando obras do Hinduísmo (Shastra).</p>
 				</div>
 				<h2 class="find-me">Nas redes sociais:</h2>
 				<ul class="my-social-links">
 					<li>
-						<a class="github" href="https://github.com/alganet" title="Acesse o gitHub de Alexandre Gaigalas">github</a>
+						<a class="github" href="http://github.com/bitbonsai" title="Acesse o gitHub de Mauricio Wolff ">github</a>
 					</li>
 					<li>
-						<a class="twitter" href="https://twitter.com/alganet" title="Acesse o Twitter de Alexandre">Twitter</a>
+						<a class="twitter" href="http://twitter.com/bitbonsai" title="Acesse o Twitter de Mauricio Wolff">Twitter</a>
 					</li>
 					<li>
-						<a class="blog" href="http://gaigalas.net/" title="Alexandre Gaigalas e a web" itemprop="url">gaigalas.net</a>
+						<a class="blog" href="http://bitbonsai.com" title="Acesse o site de Mauricio Wolff" itemprop="url">bitbonsai.com</a>
 					</li>															
 				</ul>
 				<a href="//www.braziljs.com.br" title="Home" class="home-container">
