--- a/speakers/zeno.html
+++ b/speakers/zeno.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>Alexandre Gaigalas - BrazilJS 2013</title>
-        <meta name="description" content="BrazilJS Conf 2013 - Alexandre Gaigalas" />
+        <title>Zeno Rocha - BrazilJS 2013</title>
+        <meta name="description" content="BrazilJS Conf 2013 - Zeno Rocha" />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
         <link rel="icon" href="../facebook.png" type="image/x-icon">        
@@ -20,30 +20,30 @@
         <link rel="stylesheet" href="../css/normalize.css" />
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="stylesheet" href="css/context.css" />
-        <link type="text/plain" rel="author" href="humans.txt" />
-        <link rel="canonical" href="http://braziljs.com.br/speakers/alexandre.html" />
+        <link type="text/plain" rel="author" href="../humans.txt" />
+        <link rel="canonical" href="http://braziljs.com.br/speakers/zeno.html" />
 
         <!--[if lt IE 9]>
                 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
         <!-- OPEN GRAPH -->
-        <meta property="og:url" content="http://braziljs.com.br/speakers/thibault.html" />
+        <meta property="og:url" content="http://braziljs.com.br/speakers/zeno.html" />
         <meta property="og:type" content="Website" /> 
-        <meta property="og:title" content="Alexandre Gaigalas - BrazilJS 2013" /> 
+        <meta property="og:title" content="Zeno Rocha - BrazilJS 2013" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
-        <meta property="og:description" content="Eu vou assistir a palestra de Alexandre Gaigalas na BrazilJS Conf - 2013!" />
+        <meta property="og:description" content="Eu vou assistir a palestra de Zeno Rocha na BrazilJS Conf - 2013!" />
 		<meta property="fb:admins" content="1114477480" /> 
 		<meta property="fb:app_id" content="136223956547034" /> 
 		<meta property="og:site_name" content="BrazilJS Conference" />
 
     </head>
-    <body class="alexandre">
+    <body class="zeno">
     	<div class="wrapper">    		
 			<div id="speakers">
 				<div class="speakers-wrapper">
 					<span class="burst">&nbsp;</span>
-					<span class="speaker ir">Olá meu nome é Alexandre Gaigalas</span>
+					<span class="speaker ir">Olá meu nome é Zeno Rocha</span>
 					<div class="ballons">
 						<span class="calling what">vem ver minha palestra...</span>
 						<span class="calling where">... na <b>brazilJs conf!!</b></span>
@@ -54,30 +54,32 @@
 			</div>
 			<div class="speaker-info">
 				<div class="info-container">
-					<h1 class="name" itemprop="name">Alexandre Gaigalas</h1>
-					<strong class="company" itemprop="worksFor">Yahoo!</strong>					
+					<h1 class="name" itemprop="name">Zeno Rocha</h1>
+					<strong class="company" itemprop="worksFor">Liferay</strong>					
 				</div>
 				<div id="social-networks">
 					<strong class="like-it ir ico-general">Curtiu? Compartilha!</strong>
 					<ul>
-						<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/alexandre.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
-						<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/alexandre" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+						<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/zeno.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+						<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/zeno" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
 						<li><div class="g-plusone" data-size="tall"></div></li>
 					</ul>
 				</div>
 				<div class="description" itemprop="description">
-					<p>Alexande Gaigalas é <span itemprop="jobTitle">desenvolvedor</span> no Yahoo! Brasil, entusiasta de arquiteturas RESTful e Web Semântica.</p>
+					<p>Zeno Rocha já palestrou na HTML5DevConf em São Francisco, JAX Conf em Frankfurt e muitos outros eventos. Trabalhou como engenheiro de software na Petrobras e desenvolvedor front-end no Globoesporte.com.</p>
+					<p>Hoje, com 22 anos, trabalha como front-end engineer na Liferay. Com diversos projetos open source como Browser Diet e jQuery Boilerplate, é um dos top 20 usuários mais ativos do GitHub.</p>
+				    <p>Além disso, escreve artigos para Smashing Magazine, é apresentador do podcast Zone Of Front-Enders e co-foundador da BrazilJS Foundation.</p>
 				</div>
 				<h2 class="find-me">Nas redes sociais:</h2>
 				<ul class="my-social-links">
 					<li>
-						<a class="github" href="https://github.com/alganet" title="Acesse o gitHub de Alexandre Gaigalas">github</a>
+						<a class="github" href="http://github.com/zenorcoha" title="Acesse o gitHub de Zeno Rocha">github</a>
 					</li>
 					<li>
-						<a class="twitter" href="https://twitter.com/alganet" title="Acesse o Twitter de Alexandre">Twitter</a>
+						<a class="twitter" href="http://twitter.com/zenorcoha" title="Acesse o Twitter de Zeno Rocha">Twitter</a>
 					</li>
 					<li>
-						<a class="blog" href="http://gaigalas.net/" title="Alexandre Gaigalas e a web" itemprop="url">gaigalas.net</a>
+						<a class="blog" href="http://zenorocha.com/" title="Acesse o site pessoal de Zeno Rocha" itemprop="url">zenorocha.com</a>
 					</li>															
 				</ul>
 				<a href="//www.braziljs.com.br" title="Home" class="home-container">
