Fix @zenorocha's links

--- a/speakers/zeno.html
+++ b/speakers/zeno.html
@@ -73,10 +73,10 @@
 				<h2 class="find-me">Nas redes sociais:</h2>
 				<ul class="my-social-links">
 					<li>
-						<a class="github" href="http://github.com/zenorcoha" title="Acesse o gitHub de Zeno Rocha">github</a>
+						<a class="github" href="http://github.com/zenorocha" title="Acesse o gitHub de Zeno Rocha">github</a>
 					</li>
 					<li>
-						<a class="twitter" href="http://twitter.com/zenorcoha" title="Acesse o Twitter de Zeno Rocha">Twitter</a>
+						<a class="twitter" href="http://twitter.com/zenorocha" title="Acesse o Twitter de Zeno Rocha">Twitter</a>
 					</li>
 					<li>
 						<a class="blog" href="http://zenorocha.com/" title="Acesse o site pessoal de Zeno Rocha" itemprop="url">zenorocha.com</a>
