Adding more speakers an sponsors

--- a/index.html
+++ b/index.html
@@ -157,15 +157,17 @@
 								</a>
 							</li>
 							<li>
-								<div class="hero JG">									
-									<div class="info">
-										<strong class="hero-name">???</strong>
-										<em class="hero-company">???</em>										
-									</div>
-								</div>
+                                <a class="hero zeke-sikelianos" href="http://braziljs.com.br/speakers/zeke" title="Saiba mais sobre o palestrante Zeke Sikelianos" data-layer='6'>
+                                    <span class="spikes">&nbsp;</span>
+                                    <div class="info">
+                                        <strong class="hero-name" itemprop="performer">Zeke Sikelianos</strong>
+                                        <em class="hero-company">heroku</em>
+                                    </div>
+                                    <span class="photo">&nbsp;</span>
+                                </a>
 							</li>
 							<li>
-								<a class="hero marcel-angus" href="http://braziljs.com.br/speakers/angus-marcel" title="Saiba mais sobre os palestrantes Marcel Duran e Angus Croll" data-layer='6'>
+								<a class="hero marcel-angus" href="http://braziljs.com.br/speakers/angus-marcel" title="Saiba mais sobre os palestrantes Marcel Duran e Angus Croll" data-layer='7'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performers">angus croll &amp;&amp; marcel duran</strong>
@@ -175,7 +177,7 @@
 								</a>
 							</li>
 							<li>
-                                <a class="hero rey-josh" href="http://braziljs.com.br/speakers/rey-josh" title="Saiba mais sobre os palestrantes Rey Bango e Josh Holmes" data-layer='7'>
+                                <a class="hero rey-josh" href="http://braziljs.com.br/speakers/rey-josh" title="Saiba mais sobre os palestrantes Rey Bango e Josh Holmes" data-layer='8'>
                                     <span class="spikes">&nbsp;</span>
                                     <div class="info">
                                         <strong class="hero-name" itemprop="performers">rey bango &amp;&amp; josh holmes</strong>
@@ -185,15 +187,17 @@
                                 </a>
 							</li>
 							<li>
-								<div class="hero JW">									
-									<div class="info">
-										<strong class="hero-name">???</strong>
-										<em class="hero-company">???</em>										
-									</div>
-								</div>
+                                <a class="hero mauricio-wolff" href="http://braziljs.com.br/speakers/mauricio" title="Saiba mais sobre o palestrante Mauricio Wolff" data-layer='9'>
+                                    <span class="spikes">&nbsp;</span>
+                                    <div class="info">
+                                        <strong class="hero-name" itemprop="performer">Maurício Wolff</strong>
+                                        <em class="hero-company">dell</em>
+                                    </div>
+                                    <span class="photo">&nbsp;</span>
+                                </a>
 							</li>
 							<li>
-								<a class="hero stoyan-stefanov" href="http://braziljs.com.br/speakers/stoyan" title="Saiba mais sobre o palestrante Stoyan Stefanov" data-layer='8'>
+								<a class="hero stoyan-stefanov" href="http://braziljs.com.br/speakers/stoyan" title="Saiba mais sobre o palestrante Stoyan Stefanov" data-layer='10'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Stoyan Stefanov</strong>
@@ -203,7 +207,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="hero caridy-patino" href="http://braziljs.com.br/speakers/caridy" title="Saiba mais sobre o palestrante Caridy Patino" data-layer='9'>
+								<a class="hero caridy-patino" href="http://braziljs.com.br/speakers/caridy" title="Saiba mais sobre o palestrante Caridy Patino" data-layer='11'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Caridy Patino</strong>
@@ -213,7 +217,7 @@
 								</a>
 							</li>
 							<li>
-                                <a class="hero zeno-rocha" href="http://braziljs.com.br/speakers/zeno" title="Saiba mais sobre o palestrante Zeno Rocha" data-layer='10'>
+                                <a class="hero zeno-rocha" href="http://braziljs.com.br/speakers/zeno" title="Saiba mais sobre o palestrante Zeno Rocha" data-layer='12'>
                                     <span class="spikes">&nbsp;</span>
                                     <div class="info">
                                         <strong class="hero-name" itemprop="performer">Zeno Rocha</strong>
@@ -224,7 +228,7 @@
 
 							</li>
 							<li>
-                                <a class="hero jean-carlo" href="http://braziljs.com.br/speakers/jean" title="Saiba mais sobre o palestrante Jean Carlo Emer" data-layer='11'>
+                                <a class="hero jean-carlo" href="http://braziljs.com.br/speakers/jean" title="Saiba mais sobre o palestrante Jean Carlo Emer" data-layer='13'>
                                     <span class="spikes">&nbsp;</span>
                                     <div class="info">
                                         <strong class="hero-name" itemprop="performer">Jean Carlo Emer</strong>
@@ -234,7 +238,7 @@
                                 </a>
 							</li>
 							<li>
-								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='12'>
+								<a class="hero renato-mangini" href="http://braziljs.com.br/speakers/renato" title="Saiba mais sobre o palestrante Renato Mangini" data-layer='14'>
 									<span class="spikes">&nbsp;</span>
 									<div class="info">
 										<strong class="hero-name" itemprop="performer">Renato Mangini</strong>
@@ -264,7 +268,7 @@
 										<div class="information" itemprop="description">
 											<span class="spacer">&nbsp;</span>
 											<p>Doug estava lá durante o nascimento desta midia que conquista a nossa atenção e tempo, desde então, se tornou um dos precursores e líderes no JavaScript, a linguagem de programação mais popular do mundo.</p>
-											<p>Foi o descobridor do do formato JSON (JavaScript Object Notation) enquanto era o CTO de State Software, criou a ferramenta JSLint e é o autor do referenciado JavaScript: The Good Parts.</p>
+											<p>Foi o descobridor do formato JSON (JavaScript Object Notation) enquanto era o CTO de State Software, criou a ferramenta JSLint e é o autor do referenciado JavaScript: The Good Parts.</p>
 										</div>
 									</div>
 									<ul class="social-networks">
@@ -405,6 +409,37 @@
 									</ul>
 								</div>
 							</li>
+                            <li id="zeke" itemscope itemtype="http://schema.org/Person">
+                                <div class="portrait">
+                                    <span class="photo">&nbsp;</span>
+                                    <ul class="share">
+                                        <li><div class="fb-like" data-href="http://braziljs.com.br/speakers/zeke.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+                                        <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/zeke.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+                                        <li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/zeke.html"></div></li>
+                                    </ul>
+                                </div>
+                                <div class="speaker">
+                                    <div class="info">
+                                        <h3 class="name" itemprop="name">Zeke Sikelianos</h3>
+                                        <em class="company" itemprop="worksFor">Heroku</em>
+                                        <div class="information" itemprop="description">
+                                            <span class="spacer">&nbsp;</span>
+                                            <p>Zeke é <span itemprop="jobTitle">Designer</span> e mantenedor do Node.js na Heroku</p>
+                                        </div>
+                                    </div>
+                                    <ul class="social-networks">
+                                        <li>
+                                            <a class="github ir ico-general" href="http://github.com/zeke" title="Acesse o gitHub de Zeke Sikelianos">github</a>
+                                        </li>
+                                        <li class="twitter">
+                                            <a class="twitter ir ico-general" href="http://twitter.com/zeke" title="Acesse o Twitter de Zeke Sikelianos">Twitter</a>
+                                        </li>
+                                        <li class="blog">
+                                            <a class="blog ir ico-general" href="http://zeke.sikelianos.com" title="zeke.sikelianos.com" itemprop="url">zeke.sikelianos.com</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>							
 							<li id="angus-marcel">
 								<div class="portrait">
 									<span class="photo">&nbsp;</span>
@@ -481,14 +516,46 @@
                                         </li>
                                     </ul>                                   
                                 </div>                                                              
-                            </li>														
+                            </li>
+                            <li id="mauricio" itemscope itemtype="http://schema.org/Person">
+                                <div class="portrait">
+                                    <span class="photo">&nbsp;</span>
+                                    <ul class="share">
+                                        <li><div class="fb-like" data-href="http://braziljs.com.br/speakers/mauricio.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+                                        <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/mauricio.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+                                        <li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/mauricio.html"></div></li>
+                                    </ul>
+                                </div>
+                                <div class="speaker">
+                                    <div class="info">
+                                        <h3 class="name" itemprop="name">Maurício Wolff</h3>
+                                        <em class="company" itemprop="worksFor">Dell</em>
+                                        <div class="information" itemprop="description">
+                                            <span class="spacer">&nbsp;</span>
+                                            <p>Mauricio Wolff é T&amp;T Global WebDev Lead na Dell, onde lidera um time de desenvolvedores em 4 países, fazendo testes AB e Personalização para os sites do dell.com.</p>                                            
+                                            <p>Criador do tweetroulette.co e JSHint-Inline, mantém o blog bitbonsai.com onde vez ou outra posta bits 100% recicláveis.</p>                                           
+                                        </div>
+                                    </div>
+                                    <ul class="social-networks">
+                                        <li>
+                                            <a class="github ir ico-general" href="https://github.com/stoyan" title="Acesse o github de Stoyan">github</a>
+                                        </li>
+                                        <li class="twitter">
+                                            <a class="twitter ir ico-general" href="https://twitter.com/stoyanstefanov" title="Acesse o Twitter de Stoyan">Twitter</a>
+                                        </li>
+                                        <li class="blog">
+                                            <a class="blog ir ico-general" href="http://www.phpied.com" title="Acesse o site de Stoyan" itemprop="url">phpied.com</a>
+                                        </li>
+                                    </ul>
+                                </div>                                                              
+                            </li>                            
 							<li id="stoyan" itemscope itemtype="http://schema.org/Person">
 								<div class="portrait">
 									<span class="photo">&nbsp;</span>
 									<ul class="share">
-										<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/robert.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
-										<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/robert.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
-										<li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/robert.html"></div></li>
+										<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/stoyan.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+										<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/stoyan.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+										<li><div class="g-plusone" data-size="tall" data-href="http://braziljs.com.br/speakers/stoyan.html"></div></li>
 									</ul>
 								</div>
 								<div class="speaker">
@@ -796,13 +863,20 @@
                                 </li>                                
                             </ul>
                         </div>
-                        <p class="be-a-sponsor">Também deseja fazer parte da nossa história? Seja um patrocinador do #BrazilJS2013! <a href="mailto:contato@braziljs.org" title="participe você também!">Entre em contato!</a></p>
-                        <!--div class="supporters">
+                        <div class="supporters educational">
+                            <h3 class="ir ttl-general">Apoio Educacional:</h3>
+                            <ul>
+                                <li><a href="//portal.senacrs.com.br" title="Senac-RS | Cursos de Forma&ccedil;&atilde;o e Aperfeicoamento, T&eacute;cnicos, Gradua&ccedil;&atilde;o, P&oacute;s-Gradua&ccedil;&atilde;o e Extens&atilde;o" class="senac ir">Senac-RS</a></li>
+                            </ul>
+                        </div>
+                        <div class="supporters">
                             <h3 class="ir ttl-general">Apoio:</h3>
                             <ul>
-                                <li><a href="http://marimbondo.me" title="marimbondo - web com gominho" class="marimbondo ir">marimbondo</a></li>
+                                <li><a href="//marimbondo.me" title="marimbondo - web com gominho" class="marimbondo ir">marimbondo</a></li>
+                                <li><a href="//www.eventick.com.br/" title="Eventick" class="eventick ir">Eventick</a></li>
                             </ul>
-                        </div-->                        
+                        </div>
+                        <p class="be-a-sponsor">Também deseja fazer parte da nossa história? Seja um patrocinador do #BrazilJS2013! <a href="mailto:contato@braziljs.org" title="participe você também!">Entre em contato!</a></p>                        
                     </div>          				    
 				</section>
 				<section id="follow-us">
@@ -854,7 +928,7 @@
 					<div class="directed-by-wrapper">
 						<a class="ico-general ir brazil-js-logo" href="http://braziljs.org/" rel="external" title="Conheça a BrazilJS Foundation!">BrazilJS Foundation</a>
 						<p class="copyright">&copy; 2013. Conteúdo disponível sob a licença <a rel="external" href="http://creativecommons.org/licenses/by/3.0/br/" title="Sobre a licença Creative Commons">Creative Commons</a>.</p>
-						<p class="developed-by">desenvolvido por:</p><a href="http://facebook.com/marimbondo.me" title="Desenvolvido por marimbondo - web com gominho" class="ico-general ir marimbondo-logo" rel="author">marimbondo - web com gominho</a>
+						<p class="developed-by">desenvolvido por:</p><a href="//marimbondo.me" title="Desenvolvido por marimbondo - web com gominho" class="ico-general ir marimbondo-logo" rel="author">marimbondo - web com gominho</a>
 					</div>
 				</footer>
 	    	</div>
