--- a/speakers/thibault.html
+++ b/speakers/thibault.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="../css/normalize.css" />
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="stylesheet" href="css/context.css" />
-        <link type="text/plain" rel="author" href="humans.txt" />
+        <link type="text/plain" rel="author" href="../humans.txt" />
         <link rel="canonical" href="http://braziljs.com.br/speakers/thibault.html" />
 
         <!--[if lt IE 9]>
@@ -88,13 +88,17 @@
 					<span class="inner-shadow">&nbsp;</span>	
 				</a>
 			</div>
-			<footer class="footer-container">
-				<span class="cities">&nbsp;</span>
-				<span class="gradient">&nbsp;</span>
-				<div class="debug">
-					<span class="coins">&nbsp;</span>
-				</div>
-			</footer>
+            <div class="footer-container">
+                <span class="cities">&nbsp;</span>
+                <span class="gradient">&nbsp;</span>
+            </div>
+            <footer class="directed-by">
+                <div class="directed-by-wrapper">
+                    <a class="ico-general ir brazil-js-logo" href="http://braziljs.org/" rel="external" title="Conheça a BrazilJS Foundation!">BrazilJS Foundation</a>
+                    <p class="copyright">&copy; 2013. Conteúdo disponível sob a licença <a rel="external" href="http://creativecommons.org/licenses/by/3.0/br/" title="Sobre a licença Creative Commons">Creative Commons</a>.</p>
+                    <p class="developed-by">desenvolvido por:</p><a href="//marimbondo.me" title="Desenvolvido por marimbondo - web com gominho" class="ico-general ir marimbondo-logo" rel="author">marimbondo - web com gominho</a>
+                </div>
+            </footer>
 	    </div>        
 		<script>(function(d, s, id) {
 		  var js, fjs = d.getElementsByTagName(s)[0];
