--- a/speakers/zeno.html
+++ b/speakers/zeno.html
@@ -73,10 +73,10 @@
 				<h2 class="find-me">Nas redes sociais:</h2>
 				<ul class="my-social-links">
 					<li>
-						<a class="github" href="http://github.com/zenorocha" title="Acesse o gitHub de Zeno Rocha">github</a>
+						<a class="github" href="http://github.com/zenorcoha" title="Acesse o gitHub de Zeno Rocha">github</a>
 					</li>
 					<li>
-						<a class="twitter" href="http://twitter.com/zenorocha" title="Acesse o Twitter de Zeno Rocha">Twitter</a>
+						<a class="twitter" href="http://twitter.com/zenorcoha" title="Acesse o Twitter de Zeno Rocha">Twitter</a>
 					</li>
 					<li>
 						<a class="blog" href="http://zenorocha.com/" title="Acesse o site pessoal de Zeno Rocha" itemprop="url">zenorocha.com</a>
@@ -87,13 +87,17 @@
 					<span class="inner-shadow">&nbsp;</span>	
 				</a>
 			</div>
-			<footer class="footer-container">
-				<span class="cities">&nbsp;</span>
-				<span class="gradient">&nbsp;</span>
-				<div class="debug">
-					<span class="coins">&nbsp;</span>
-				</div>
-			</footer>
+            <div class="footer-container">
+                <span class="cities">&nbsp;</span>
+                <span class="gradient">&nbsp;</span>
+            </div>
+            <footer class="directed-by">
+                <div class="directed-by-wrapper">
+                    <a class="ico-general ir brazil-js-logo" href="http://braziljs.org/" rel="external" title="Conheça a BrazilJS Foundation!">BrazilJS Foundation</a>
+                    <p class="copyright">&copy; 2013. Conteúdo disponível sob a licença <a rel="external" href="http://creativecommons.org/licenses/by/3.0/br/" title="Sobre a licença Creative Commons">Creative Commons</a>.</p>
+                    <p class="developed-by">desenvolvido por:</p><a href="//marimbondo.me" title="Desenvolvido por marimbondo - web com gominho" class="ico-general ir marimbondo-logo" rel="author">marimbondo - web com gominho</a>
+                </div>
+            </footer>
 	    </div>        
 		<script>(function(d, s, id) {
 		  var js, fjs = d.getElementsByTagName(s)[0];
