--- a/speakers/rey-josh.html
+++ b/speakers/rey-josh.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>Rey Bango &amp;&amp; Josh Holmes - BrazilJS 2013</title>
-        <meta name="description" content="BrazilJS Conf 2013 - Rey Bango &amp;&amp; Josh Holmes" />
+        <title>Josh Holmes - BrazilJS 2013</title>
+        <meta name="description" content="BrazilJS Conf 2013 - Josh Holmes" />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
         <link rel="apple-touch-icon" href="../apple-touch-icon.png" />
         <link rel="icon" href="../facebook.png" type="image/x-icon">        
@@ -30,9 +30,9 @@
         <!-- OPEN GRAPH -->
         <meta property="og:url" content="http://braziljs.com.br/speakers/rey-josh.html" />
         <meta property="og:type" content="Website" /> 
-        <meta property="og:title" content="Rey Bango &amp;&amp; Josh Holmes - BrazilJS 2013" /> 
+        <meta property="og:title" content="Josh Holmes - BrazilJS 2013" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
-        <meta property="og:description" content="Venha assistir a palestra de Rey Bango e Josh Holmes na BrazilJS Conf - 2013!" />
+        <meta property="og:description" content="Venha assistir a palestra Josh Holmes na BrazilJS Conf - 2013!" />
 		<meta property="fb:admins" content="1114477480" /> 
 		<meta property="fb:app_id" content="136223956547034" /> 
 		<meta property="og:site_name" content="BrazilJS Conference" />
@@ -43,9 +43,9 @@
 			<div id="speakers">
 				<div class="speakers-wrapper">
 					<span class="burst">&nbsp;</span>
-					<span class="speaker ir">Olá, somos Rey Bango e Josh Holmes</span>
+					<span class="speaker ir">Olá, sou Josh Holmes</span>
 					<div class="ballons">
-						<span class="calling what">vem ver a nossa palestra...</span>
+						<span class="calling what">venha ver a minha palestra...</span>
 						<span class="calling where">... na <b>brazilJs conf!!</b></span>
 					</div>
 					<strong class="logo ir">BrazilJS Conf</strong>
@@ -54,7 +54,7 @@
 			</div>
 			<div class="speaker-info">
 				<div class="info-container">
-					<h1 class="name">Rey Bango &amp;&amp; Josh Holmes</h1>
+					<h1 class="name">Josh Holmes</h1>
 					<strong class="company">Microsoft</strong>					
 				</div>
 				<div id="social-networks">
@@ -66,21 +66,11 @@
 					</ul>
 				</div>
 				<div class="description">
-					<p>Rey tem como foco criar conhecimento para o client-side, desenvolvimento baseado em padrões e ajudar a Microsoft atender as necessidades da comunidade de desenvolvimento web.</p>
-					<p>Ele é um defensor do plataformas open-source, ex-membro do projeto JQuery, e frequente escritor.</p>
 					<p>Josh, atualmente está empregado pela Microsoft como gerente no time do Internet Explorer.</p>
 					<p>Antes de se juntar a Microsoft em outubro de 2006, Josh era um consultor e trabalhou com uma gama de clientes, indo desde grandes empresas até companhias de menor tamanho.</p>
 					<p>Josh é um palestrante frequente e conferencista lider em eventos nacionais e internacionais de que focam em tecnologias que a Microsoft apoia, como ASP.NET, PHP, Ironruby, Javascript e outras linguagens.</p>
 				</div>
-				<h2 class="find-me">Nas redes sociais:</h2>
-				<ul class="my-social-links">
-					<li>
-						<a class="github" href="https://github.com/reybango" title="Acesse o github de Rey Bango">github</a>
-					</li>
-					<li>
-						<a class="twitter" href="https://twitter.com/reybango" title="Acesse o Twitter de Rey Bango">Twitter</a>
-					</li>
-				</ul>				
+				<h2 class="find-me">Nas redes sociais:</h2>			
 				<ul class="my-social-links">
 					<li>
 						<a class="github" href="https://github.com/joshholmes" title="Acesse o github de Josh Holmes">github</a>
@@ -94,13 +84,17 @@
 					<span class="inner-shadow">&nbsp;</span>	
 				</a>
 			</div>
-			<footer class="footer-container">
-				<span class="cities">&nbsp;</span>
-				<span class="gradient">&nbsp;</span>
-				<div class="debug">
-					<span class="coins">&nbsp;</span>
-				</div>
-			</footer>
+            <div class="footer-container">
+                <span class="cities">&nbsp;</span>
+                <span class="gradient">&nbsp;</span>
+            </div>
+            <footer class="directed-by">
+                <div class="directed-by-wrapper">
+                    <a class="ico-general ir brazil-js-logo" href="http://braziljs.org/" rel="external" title="Conheça a BrazilJS Foundation!">BrazilJS Foundation</a>
+                    <p class="copyright">&copy; 2013. Conteúdo disponível sob a licença <a rel="external" href="http://creativecommons.org/licenses/by/3.0/br/" title="Sobre a licença Creative Commons">Creative Commons</a>.</p>
+                    <p class="developed-by">desenvolvido por:</p><a href="//marimbondo.me" title="Desenvolvido por marimbondo - web com gominho" class="ico-general ir marimbondo-logo" rel="author">marimbondo - web com gominho</a>
+                </div>
+            </footer>
 	    </div>        
 		<script>(function(d, s, id) {
 		  var js, fjs = d.getElementsByTagName(s)[0];
