Fixing the manifesto

--- a/index.html
+++ b/index.html
@@ -799,11 +799,10 @@
 				        <div class="the-origin our-history">
 				            <strong class="ir ttl-general moto">BrazilJS: unidos cresceremos</strong>
 				            <p class="disclaimer">A IDEIA DO BRAZILJS SURGIU EM MEADOS DE 2008. MUITOS EVENTOS DE TECNOLOGIA E DE DIVERSAS LINGUAGENS DIFERENTES ESTAVAM ACONTECENDO NA ÉPOCA. JAYDSON E FELIPE SEMPRE FORAM ENTUSIASTAS JAVASCRIPT, E SENTIRAM A FALTA DE UMA CONFERÊNCIA FOCADA NA LINGUAGEM, QUE PARA ELES, TINHA UM FUTURO PROMISSOR.</p>
-				            <p class="disclaimer">POUCO TEMPO DEPOIS, EM 2009, NASCEU A PRIMEIRA CONFERÊNCIA JAVASCRIPT, A JSCONF AMERICANA. DURANTE O ANO DE 2010 A IDEIA EVOLUIU E CHRISTIANO MILFONT ESTAVA PENSANDO NO MESMO, FAZER UMA CONFERÊNCIA JAVASCRIPT NACIONAL...</p>				            
+				            <p class="disclaimer">POUCO TEMPO DEPOIS, EM 2009, NASCEU A PRIMEIRA CONFERÊNCIA JAVASCRIPT, A JSCONF AMERICANA. DURANTE O ANO DE 2010 A IDEIA EVOLUIU EM 2011 SURGIU A PRIMEIRA CONFERÊNCIA JAVASCRIPT DO BRASIL</p>
 				        </div>
 				        <div class="the-future our-history">
-				            <p class="disclaimer">...UNINDO FORÇAS, JAYDSON, FELIPE E CHRISTIANO CONSEGUIRAM EM 2011 FAZER A PRIMEIRA CONFERÊNCIA JAVASCRIPT DO BRASIL.</p>
-				            <p class="disclaimer">NA SUA ESTREIA, EM MAIO DE 2011, O BRAZILJS SE TORNOU UM DOS MAIORES EVENTOS JAVASCRIPT DO MUNDO, CONTANDO COM 600 PARTICIPANTES E MAIS DE 20 PALESTRAS. EM 2013, TEREMOS A TERCEIRA EDIÇÃO DO EVENTO E TEMOS O OBJETIVO OUSADO DE NOS TORNAR A MAIOR CONFERÊNCIA JAVASCRIPT DO MUNDO!</p>
+				            <p class="disclaimer">NA SUA ESTREIA, EM MAIO DE 2011, O BRAZILJS SE TORNOU UM DOS MAIORES EVENTOS JAVASCRIPT DO MUNDO, CONTANDO COM 600 PARTICIPANTES E MAIS DE 20 PALESTRAS. EM 2012 O BRAZILJS CONTOU COM MAIS DE 900 PESSOAS E TROUXE PELA PRIMEIRA VEZ AO BRASIL, BRENDAN EICH, CRIADOR DA LINGUAGEM JAVASCRIPT. EM 2013, TEREMOS A TERCEIRA EDIÇÃO DO EVENTO E TEMOS O OBJETIVO OUSADO DE MANTER O TÍTULO DE MAIOR CONFERÊNCIA JAVASCRIPT DO MUNDO!</p>
 				        </div>
 				    </div>
 				</section>				
